--- a/Toy_Example.Rmd
+++ b/Toy_Example.Rmd
@@ -42,45 +42,43 @@ $$\begin{aligned}\beta_0(\tau) &= \beta_0 + Q_\tau(\epsilon) \\ \epsilon(\tau) &
 For toy example, I will use n = 300, p = 50, g = 20.
 
 ```{r}
-set.seed(0)
+set.seed(1)
 n <- 400
 m <- 10
 p <- 30
-#num_nz <- 15   #round((p+1)*m*(1/5)) 
-b <- 31
+b <- 15
 num_rank <- 5
 
-X <- matrix(rnorm(n*p, mean = 0, sd = 1), nrow = n) %>% cbind(1, .)   #add intercept term in X
+sigma_mat <- matrix(nrow = p, ncol = p)
+for(j in 1:p) {
+  for(k in 1:p) {
+    sigma_mat[j, k] <- 0.3^(abs(j-k))
+  }
+}
 
-#sp_mat <- rsparsematrix(nrow = p+1, ncol = m, nnz = num_nz)             # make sparse matrix
-#for(i in 1:(p+1)) {
-  #for(j in 1:m) {
-    #if(abs(sp_mat[i, j]) != 0) {sp_mat[i, j] <- rnorm(1, mean = 5, sd = 0.1)}
-  #}
-#}
+X <- matrix(rnorm(n*p, mean = 0, sd = 1), nrow = n)
+X <- X %*% expm::sqrtm(sigma_mat) %>%
+    cbind(rep(1, n), .)
+  
 col_ind <- sample(1:m, size = m, replace = FALSE)
 row_ind <- sample(1:(p+1), size = m)
 sp_mat <- matrix(0, nrow = p+1, ncol = m)
 for(i in 1:m) {
-  sp_mat[row_ind[i], col_ind[i]] <- rnorm(1, mean = 5, sd = 0.1)
+   sp_mat[row_ind[i], col_ind[i]] <- rnorm(1, mean = 5, sd = 0.1)
 }
-num_zero <- which(sp_mat==0, arr.ind = TRUE) %>% nrow
-num_nz <- (p+1)*m - num_zero
 
-LR_mat <- matrix(rnorm((p+1)*m, mean = 1, sd = 0.1), ncol = m) # make low rank matrix using SVD
+LR_mat <- matrix(rnorm((p+1)*m, mean = 1, sd = 3), ncol = m) # make low rank matrix using SVD
 SVD <- svd(LR_mat)
 D_mat <- diag(SVD$d)
-idx <- (num_rank+1):m
+idx <- (num_rank+1):min(m, p)
 D_mat[idx, idx] <- 0
-LR_mat <- SVD$u %*% D_mat %*% t(SVD$v)          
+LR_mat <- SVD$u %*% D_mat %*% t(SVD$v)
 
-true_B <- sp_mat + LR_mat            # B(tau) = sparse matrix + low rank matrix
+sigma <- runif(n,0.3,0.7)
+eps <- MASS::mvrnorm(n = m, mu = rep(0,n), Sigma = diag(sigma^2,n)) %>% t()
 
-eps <- matrix(rnorm(n*m, mean = 0, sd = 0.1), nrow = n)
-
-Y <- X%*%true_B + eps
+Y <- X %*% (LR_mat + sp_mat) + eps
 ```
-
 
 
 $B(\tau)$ = sparse matrix + low rank matrix
@@ -104,7 +102,7 @@ $$\rho_\tau(x) = (\tau - \mathbb{I}(x<0))x$$
 ```{r}
 K <- 10
 tau_seq <- seq(from = 0.35, to = 0.65, length.out = b)
-tau_seq_real <- tau_seq[tau_seq > 0.39 & tau_seq < 0.61]
+tau_seq_real <- tau_seq[tau_seq >= 0.4 & tau_seq <= 0.6]
 
 knots_seq <- seq(min(tau_seq)- 0.02, max(tau_seq) + 0.02, length.out = K)
 Phi <- fda::bsplineS(tau_seq, breaks= knots_seq, norder=2, nderiv=0, returnMatrix=FALSE)
@@ -164,22 +162,111 @@ Y_modified <- Y - X%*%lasso_coef
 lin_model <- lm(Y_modified~., data = data.frame(X[, -1]))
 alpha_init <- lin_model$coefficients
 
+init_val <- add_decomp_r(delta = 1, lambda_1 = 13, lambda_2 = 80, tol_error = 0.1, max_iter = 10,
+                       X = X, Y = Y, V = V, Phi = Phi, 
+                     theta_0 = theta_init, alpha_0 = alpha_init, tau_seq = tau_seq, weight = FALSE)
 
 ```
 
 
 ```{r}
-max_iter <- 300
-delta <- 1
-lambda_1 <- 8
-lambda_2 <- 40
-tol_error <- 0.1
-#theta_init <- matrix(0.01, nrow = (p+1)*K, ncol = m)
-#alpha_init <- matrix(0.8, nrow = p+1, ncol = m)
+BIC_func <- function(X, Y, V, Phi, theta_0, alpha_0, tau_seq, tau_seq_real, lamb1_seq, lamb2_seq, 
+                     max_iter) {
+  m <- ncol(Y)
+  p <- ncol(X) - 1
+  K <- ncol(V[[1]])/(p+1)
+  idx_tau <- tau_seq %in% tau_seq_real
+  
+  # iteration for lamb1_seq and lamb2_seq
+  cores=detectCores()
+  cl <- makeCluster(cores[1]-2) #not to overload your computer
+  registerDoParallel(cl) # Ready to parallel
+  
+  simulation <- foreach(lambda_1 = lamb1_seq, .noexport = "add_decomp") %:%
+    foreach(lambda_2 = lamb2_seq, .noexport = "add_decomp") %dopar% {
+      library(tidyverse)
+      library(splines)
+      library(Matrix)
+      library(Rcpp)
+      library(glmnet)
+      library(fda)
+      sourceCpp("functions/add_decomp_function.cpp")
+      
+      result <- add_decomp(delta = 1, lambda_1 = lambda_1, lambda_2 = lambda_2, tol_error = 0.001, 
+                           max_iter = max_iter, X = X, Y = Y, V = V, Phi = Phi, 
+                           theta_0, alpha_0, tau_seq = tau_seq)
+      
+      result
+    }
+  stopCluster(cl)
+  
+  simulation <- lapply(simulation, FUN = function(x) `names<-`(x, value = paste0("lambda_2=", lamb2_seq)))
+  names(simulation) <- paste0("lambda_1=", lamb1_seq)
+  
+  BIC <- list()
+  for(i in 1:length(lamb1_seq)) {
+    BIC[[i]] <- list()
+    for(j in 1:length(lamb2_seq)) {
+      result <- simulation[[i]][[j]]
+      est_error <- lapply(V[idx_tau], FUN = function(x) (Y - X %*% result$alpha - x %*% result$theta)
+                          %>% as.vector())
+      check_loss_err <- mapply(FUN = function(x, tau) check_ft(x, tau), x = est_error, 
+                               tau = as.list(tau_seq_real), SIMPLIFY = FALSE) %>%
+        lapply(FUN = function(x) sum(x)/n) %>% unlist %>% sum
+      gamma_tau_hat <- est_gamma(Phi[idx_tau, ], result$theta)
+      S_hat <- check_sp_table(true = matrix(0, nrow = (p+1), ncol = m), 
+                              est = gamma_tau_hat, table = TRUE, tol = 0.1^5, tau_seq = tau_seq_real) %>%
+        .$Est_Positive %>% sum
+      BIC[[i]][[j]] <- data.frame(log_Q = log(check_loss_err), 
+                                  r_hat = rankMatrix(result$alpha)[1], 
+                                  S_hat = S_hat)
+    }
+  }
+  
+  BIC_data <- lapply(BIC, FUN = function(x) `names<-`(x, value = lamb2_seq) %>% 
+                       bind_rows(.id = "lambda_2")) %>%
+    `names<-`(value = lamb1_seq) %>%
+    bind_rows(.id = "lambda_1") %>%
+    mutate(term = (r_hat * (m + p - r_hat) + K * S_hat)/(2*n*m), 
+           BIC_log_sum = log_Q + log(p+m)*term, 
+           BIC_log_p = log_Q + log(p)*term, 
+           BIC_log_n = log_Q + log(n)*term, 
+           BIC_llog_p = log_Q + log(log(p))*term,
+           BIC_llog_n = log_Q + log(log(n))*term) %>%
+    group_by(lambda_1, lambda_2) %>%
+    select_at(vars(starts_with("BIC"))) %>%
+    ungroup()
+  
+  BIC_val_min <- apply(select_at(BIC_data, vars(starts_with("BIC"))), 2, min) %>%
+    `names<-`(value = c("log_sum", "log_p", "log_n", "llog_p", "llog_n"))
+  
+  min_BIC <- filter(BIC_data, BIC_log_sum == BIC_val_min["log_sum"]| BIC_log_p == BIC_val_min["log_p"] |
+                      BIC_log_n == BIC_val_min["log_n"] | BIC_llog_p == BIC_val_min["llog_p"] | 
+                      BIC_llog_n == BIC_val_min["llog_n"])
+  
+  output <- list(min_BIC = min_BIC, 
+                 BIC_data = BIC_data, 
+                 simulation = simulation)
+  
+  
+  return(output)
+}
+```
+
+```{r}
+lamb1_seq <- seq(10, 40, by = 10)
+lamb2_seq <- seq(1000, 8000, by = 1000)
+
+BIC_simul <- BIC_func(X, Y, V, Phi, theta_0 = init_val$theta, alpha_0 = init_val$alpha, tau_seq, tau_seq_real, lamb1_seq = lamb1_seq, lamb2_seq = lamb2_seq, max_iter = 50)
+```
 
 
-result <- add_decomp(delta, lambda_1, lambda_2, tol_error, max_iter, X = X, Y = Y, V = V, Phi = Phi, 
-                     theta_0 = theta_init, alpha_0 = alpha_init, tau_seq = tau_seq)
+```{r}
+BIC_lamb1 <- BIC_simul$min_BIC$lambda_1
+BIC_lamb2 <- BIC_simul$min_BIC$lambda_2
+
+
+result <- BIC_simul$simulation[[which(lamb1_seq == BIC_lamb1)]][[which(lamb2_seq == BIC_lamb2)]]
 ```
 
 
@@ -236,7 +323,7 @@ $\hat{\gamma}_j^{(g)}(\tau_\ell)=\hat{\theta}_{j}^{(g)T}\phi_s(\tau)$
 
 
 ```{r}
-idx_tau <- (tau_seq > 0.39 & tau_seq <= 0.61)
+idx_tau <- (tau_seq >= 0.4 & tau_seq <= 0.6)
 
 gamma_tau_hat <- est_gamma(Phi[idx_tau, ], result$theta)
 ```
@@ -276,26 +363,26 @@ sp_heat <- data.frame(col = rep(1:m, each = (p+1)),
     axis.ticks.y = element_blank()) +
   ggtitle(expression(Gamma~"("~0.5~")")) 
 
-gamma_heat <- data.frame(col = rep(1:m, each = (p+1)), 
-           row = rep(1:(p+1), m),
-           value = as.vector(gamma_tau_hat[[11]])) %>%
-  mutate(value = ifelse(abs(value) < 0.1^5, 0, value)) %>%
-  ggplot(aes(x = col, y = -row, fill = value)) +
-  geom_tile(color = "grey") +
-  scale_fill_gradient2(low = "red",mid = "white", high = "blue") +
-  theme_bw() +
-  theme(axis.line = element_blank(),
-    panel.grid.major = element_blank(),
-    panel.grid.minor = element_blank(),
-    panel.border = element_blank(),
-    panel.background = element_blank(), 
-    axis.title.x = element_blank(), 
-    axis.text.x = element_blank(), 
-    axis.ticks.x = element_blank(), 
-    axis.title.y = element_blank(), 
-    axis.text.y = element_blank(), 
-    axis.ticks.y = element_blank()) +
-  ggtitle(expression(Gamma~"("~tau[11]~")"))
+#gamma_heat <- data.frame(col = rep(1:m, each = (p+1)), 
+           #row = rep(1:(p+1), m),
+           #value = as.vector(gamma_tau_hat[[11]])) %>%
+  #mutate(value = ifelse(abs(value) < 0.1^5, 0, value)) %>%
+  #ggplot(aes(x = col, y = -row, fill = value)) +
+  #geom_tile(color = "grey") +
+  #scale_fill_gradient2(low = "red",mid = "white", high = "blue") +
+  #theme_bw() +
+  #theme(axis.line = element_blank(),
+    #panel.grid.major = element_blank(),
+    #panel.grid.minor = element_blank(),
+    #panel.border = element_blank(),
+    #panel.background = element_blank(), 
+    #axis.title.x = element_blank(), 
+    #axis.text.x = element_blank(), 
+    #axis.ticks.x = element_blank(), 
+    #axis.title.y = element_blank(), 
+    #axis.text.y = element_blank(), 
+    #axis.ticks.y = element_blank()) +
+  #ggtitle(expression(Gamma~"("~tau[11]~")"))
 
 
 common_zero_heat <- lapply(gamma_tau_hat, FUN = function(x) data.frame(col = rep(1:m, each = (p+1)),
@@ -324,7 +411,7 @@ common_zero_heat <- lapply(gamma_tau_hat, FUN = function(x) data.frame(col = rep
     axis.ticks.y = element_blank()) +
   ggtitle(expression(Gamma~"("~tau[l]~")")) 
 
-grid.arrange(sp_heat, gamma_heat, nrow = 1)
+#grid.arrange(sp_heat, gamma_heat, nrow = 1)
 grid.arrange(sp_heat, common_zero_heat, nrow = 1)
 ```
 
@@ -385,8 +472,44 @@ EE_mat %>% apply(2, mean) %>% sum %>% sqrt
 
 ```
 
+### Relative error
+
+$$\begin{aligned}RE&=\frac{\sqrt{\int_\Delta\sum_{j=1}^p\sum_{g=1}^m\bigg(\hat{\Gamma}(\tau_\ell)-\Gamma(\tau_\ell)\bigg)^2d\tau/p}}{\sqrt{\int_\Delta\sum_{j=1}^p\sum_{g=1}^m\bigg(\Gamma(\tau_\ell)\bigg)^2d\tau/p}}\end{aligned}$$
+
+```{r}
+RE_denom <- lapply(gamma_tau_hat[-1], FUN = function(x) (x)*(x) * h) %>%
+  Reduce("+", .) 
+
+RE <- (EE_mat %>% apply(2, mean) %>% sum %>% sqrt)/(RE_denom %>% apply(2, mean) %>% sum %>% sqrt)
+RE
+```
 
 
+
+### Objective function
+$$\begin{aligned}\text{obj.func} =& \sum_{g=1}^m\sum_{\ell=1}^b\sum_{i=1}^n\frac{1}{n}\rho_{\tau_\ell}(Y_i^{(g)}-X\alpha^{(g)}-V^{(\ell)}\theta^{(g)}) \\&+\lambda_1||XA||_*+\lambda_2\sum_{g=1}^m\sum_{j=1}^p||\theta^{(g)}_j||_2\end{aligned}$$
+
+```{r}
+est_error <- lapply(V[idx_tau], FUN = function(x) (Y - X %*% result$alpha - x %*% result$theta)
+                    %>% as.vector())
+
+check_loss_err <- mapply(FUN = function(x, tau) check_ft(x, tau), x = est_error, 
+                           tau = as.list(tau_seq_real), SIMPLIFY = FALSE) %>%
+  lapply(FUN = function(x) sum(x)/n) %>% unlist %>% sum
+
+low_rank_penalty <- svd(X %*% result$alpha) %>% .$d %>% sum
+
+sparse_penalty <- 0
+for(j in 0:p) {
+  for(g in 1:m) {
+    theta_j_g <- result$theta[(K*j +1):((j+1)*K), g]
+    norm <- theta_j_g^2 %>% sum %>% sqrt
+    sparse_penalty <- sparse_penalty + norm
+  }
+}
+
+check_loss_err + lambda_1*low_rank_penalty + lambda_2 * sparse_penalty
+```
 
 
 
@@ -431,70 +554,44 @@ lapply(alpha_hat, FUN = function(x) svd(x) %>% .$d) %>%
 
 ### ROC curve
 
-```{r eval = FALSE}
-lamb_2_seq <- c(seq(from = 0.1, to = 1.5, by =0.1), 1.75, 2)
-simul <- list()
-
-for(idx in 1:length(lamb_2_seq)) {
-  simul[[idx]] <- add_decomp(delta = 0.1, lambda_1 = 0.2, lambda_2 = lamb_2_seq[idx], tol_error = 0.1, max_iter = 50)
-  if((idx %% 2) == 1) print(paste0("iter = ", idx))
-}
-
-```
-
 
 ```{r}
-cores <- detectCores()
-cl <- makeCluster(cores[1] - 2)
-registerDoParallel(cl)
+lamb2_seq <- c(10, 50, 100, seq(500, 4000, by = 100), 6000, 8000, 10000)
 
-simul <- foreach(lamb_2_seq = c(1, 2)) %dopar% {
-  library(tidyverse)
-  add_decomp_r(delta, lambda_1, lamb_2_seq, tol_error, max_iter, theta_init, alpha_init)
-}
+simul <- BIC_func(X, Y, V, Phi, theta_0 = init_val$theta, alpha_0 = init_val$alpha, tau_seq, tau_seq_real, lamb1_seq = 10, lamb2_seq = lamb2_seq, max_iter = 50)
 
-stopCluster(cl)
+simulation <- simul$simulation[[1]]
 ```
 
 
-
-
 ```{r eval = FALSE}
-theta_hat <- simul %>%
+theta_hat <- simulation %>%
   lapply(FUN = function(x) x$theta)
 
 gamma_tau_hat <- list()
-for(idx in 1:length(lamb_2_seq)) {
-  gamma_tau_hat[[idx]] <- list()
-  for(l in 1:b) {
-    phi_tau <- Phi[l, ]
-    gamma_tau_hat[[idx]][[l]] <- matrix(nrow = (p+1), ncol = m)
-    for(i in 1:(p+1)) {
-      for(j in 1:m) {
-        theta_j_g <- theta_hat[[idx]][(1+(i-1)*K):(K*i), j]
-        gamma_tau_hat[[idx]][[l]][i, j] <- theta_j_g %*% phi_tau
-      }
-    }
-  }
+for(idx in 1:length(lamb2_seq)) {
+  gamma_tau_hat[[idx]] <- est_gamma(Phi[idx_tau, ], theta_hat[[idx]])
 }
 
 ROC_table <- list()
-for(idx in 1:length(lamb_2_seq)) {
-  ROC_table[[idx]] <- check_sp_table(true = sp_mat, est = gamma_tau_hat[[idx]]) 
+for(idx in 1:length(lamb2_seq)) {
+  ROC_table[[idx]] <- check_sp_table(true = sp_mat, est = gamma_tau_hat[[idx]], 
+                                     tau_seq = tau_seq_real) 
 } 
 
 ROC_table %>%
-  `names<-`(value = lamb_2_seq) %>%
+  `names<-`(value = lamb2_seq) %>%
   bind_rows(.id = "lamb_2") %>%
-  #filter(!(lamb_2 %in% c(0.55, 0.575, 0.6, 0.7, 0.8, 0.9, 1))) %>%
   arrange(FPR, TPR) %>%
   ggplot() +
   geom_line(aes(x = FPR, y = TPR)) +
   geom_point(aes(x = FPR, y = TPR)) +
   geom_abline(intercept = 0, slope = 1) +
   coord_fixed(ratio = 1) +
-  ggtitle(label = expression(delta ~ " =0.1, "~lambda[1] ~ "=0.2, "~lambda[2] ~ "in (0.1, 1.5), max_iter = 50")) +
-  scale_y_continuous(limits = c(0, 1))
+  ggtitle(label = expression(delta ~ " =1, "~lambda[1] ~ "=10, "~lambda[2] ~ "in (10, 10000), max_iter = 50")) +
+  scale_y_continuous(limits = c(0, 1)) +
+  scale_x_continuous(limits = c(0, 1))
+  
 ```
 
 
