simulation for location-scale model

--- a/Simulation.Rmd
+++ b/Simulation.Rmd
@@ -106,9 +106,12 @@ Y_list <- mapply(FUN = function(X, LR, SP, eps) X %*% (LR + SP) + eps,
 
 # Case 2. 
 
-$$\epsilon_i^{(g)}(\tau)\sim\Phi(\tilde{x}_{i3})t_3$$
+$$B(\tau)=L+S(\tau)$$
+
+$$y_{ik}=x_i^TB(\tau)^{(k)}+x_i^T\xi^{(k)}\epsilon_i\text{ where }\xi_3^{(k)}=1,\xi^{(k)}_j=0(j\ne3)$$
 
 
+$$\epsilon\sim N(0, 1)$$
 ## 0. Initial Setting
 
 ```{r}
@@ -118,11 +121,13 @@ m <- 10
 p <- 30
 b <- 15
 num_rank <- 5
+num_rank_X <- 10
+
 simul_times <- 100
 
-sigma_mat <- matrix(nrow = p, ncol = p)
-for(j in 1:p) {
-  for(k in 1:p) {
+sigma_mat <- matrix(nrow = num_rank_X, ncol = num_rank_X)
+for(j in 1:num_rank_X) {
+  for(k in 1:num_rank_X) {
     sigma_mat[j, k] <- 0.3^(abs(j-k))
   }
 }
@@ -131,11 +136,20 @@ X_list <- list()
 LR_mat_list <- list()
 sp_mat_list <- list()
 eps_list <- list()
+xi_list <- list()
+
+xi_mat <- matrix(0, nrow = (p+1), ncol = m) 
+xi_mat[c(1,4), ] <- rep(1, m)
 
 for(simul in 1:simul_times) {
-  X <- matrix(rnorm(n*p, mean = 0, sd = 1), nrow = n)
-  X_list[[simul]] <- X %*% expm::sqrtm(sigma_mat) %>%
-    cbind(rep(1, n), .)
+  X <- matrix(rnorm(n*num_rank_X, mean = 0, sd = 1), nrow = n)
+  X <- X %*% expm::sqrtm(sigma_mat)
+  X <- cbind(X, X, X)
+  for(j in 11:20) {
+    X[, j] <- X[, j-10] + X[, j-9]
+    X[, (j+10)] <- X[, j-10] + X[, j-8]
+  }
+  X_list[[simul]] <- X %>% cbind(rep(1, n), .)
   
   col_ind <- sample(1:m, size = m, replace = FALSE)
   row_ind <- sample(1:(p+1), size = m)
@@ -144,25 +158,21 @@ for(simul in 1:simul_times) {
     sp_mat_list[[simul]][row_ind[i], col_ind[i]] <- rnorm(1, mean = 5, sd = 0.1)
   }
   
-  LR_mat <- matrix(rnorm((p+1)*m, mean = 1, sd = 0.1), ncol = m) # make low rank matrix using SVD
+  LR_mat <- matrix(rnorm((p+1)*m, mean = 0, sd = 1), ncol = m) # make low rank matrix using SVD
   SVD <- svd(LR_mat)
-  D_mat <- diag(SVD$d)
-  idx <- (num_rank+1):m
+  D_mat <- diag(runif(num_rank, min = 2, max = 2.3) %>% sort(decreasing = TRUE), nrow = length(SVD$d))
+  idx <- (num_rank+1):min(m, p)
   D_mat[idx, idx] <- 0
   LR_mat_list[[simul]] <- SVD$u %*% D_mat %*% t(SVD$v)
   
-  eps_list[[simul]] <- matrix(nrow = n, ncol = m)
-  for(i in 1:n) {
-    for(j in 1:m) {
-      x_i3 <- X_list[[simul]][i, 3]
-      t_3 <- rt(1, df = 3)
-      eps_list[[simul]][i, j] <- pnorm(x_i3)*t_3
-    }
-  }
+  eps_list[[simul]] <- matrix(rnorm(n*m), nrow = n, ncol = m)
+  xi_list[[simul]] <- xi_mat
 }
 
-Y_list <- mapply(FUN = function(X, LR, SP, eps) X %*% (LR + SP) + eps, 
-                 X_list, LR_mat_list, sp_mat_list, eps_list, SIMPLIFY = FALSE)
+
+
+Y_list <- mapply(FUN = function(X, LR, SP, xi, eps) X %*% (LR + SP) + X %*% xi * eps, 
+                 X_list, LR_mat_list, sp_mat_list, xi_list, eps_list, SIMPLIFY = FALSE)
 ```
 
 ---
@@ -295,12 +305,12 @@ simulation <- foreach(simul = 1:simul_times, .noexport = "add_decomp") %dopar% {
     }
   alpha_init <- ridge_coef
   
-  init_val <- add_decomp_r(delta = 1, lambda_1 = 0.03, lambda_2 = 0.01, tol_error = 0.1, max_iter = 50,
+  init_val <- add_decomp_r(delta = 1, lambda_1 = 0.7, lambda_2 = 5, tol_error = 0.1, max_iter = 50,
                            X = X, Y = Y, V = V, Phi = Phi, 
                            theta_0 = theta_init, Z_0 = X%*%alpha_init, tau_seq = tau_seq, weight = FALSE)
   
-  lamb1_seq <- c( seq(0.005, 0.015, by = 0.002))
-  lamb2_seq <- c(seq(1, 4, by = 0.5))
+  lamb1_seq <- c( seq(0.05, 0.5, by = 0.05))
+  lamb2_seq <- c(seq(3, 7, by = 0.5))
   BIC_simul <- BIC_func(X, Y, V, Phi, theta_0 = init_val$theta, Z_0 = init_val$Z, tau_seq, tau_seq_real, 
                         lamb1_seq = lamb1_seq, lamb2_seq = lamb2_seq, max_iter = 50)
   
